<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ContentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1500:874"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_nav_bg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/sign_up_padding">


            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/sign_up"
                android:textColor="?attr/appPrimary"
                style="@style/SemiBold"
                android:includeFontPadding="false"
                android:textSize="@dimen/sign_up_title_text_size" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTextView"
                android:layout_marginTop="@dimen/sign_up_edit_text_margin_top"
                android:autofillHints="emailAddress"
                android:includeFontPadding="false"
                android:hint="@string/email"
                android:text="konami@thinkar.com"
                android:textColorHint="?attr/appTextPlaceholder"
                style="@style/Regular"
                android:textSize="@dimen/sign_up_edit_text_size"
                android:textColor="?attr/appTextPrimary" />

            <TextView
                android:id="@+id/invalidTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/emailEditText"
                app:layout_constraintStart_toStartOf="@id/titleTextView"
                android:layout_marginStart="@dimen/sign_up_edit_text_invalid_hint_margin_left"
                style="@style/Regular"
                android:text="@string/email_invalid_hint"
                android:textColor="?attr/appRed"
                android:textSize="@dimen/sign_up_hint_text_size"/>

            <com.konami.ailens.main.CutCornerButton
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_bottom_button_height"
                app:layout_constraintTop_toBottomOf="@id/emailEditText"
                android:layout_marginTop="@dimen/sign_up_big_button_margin_top"
                android:text="@string/next"
                style="@style/PositiveBigCornerButton" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/sign_up_already_have_account_margin_top"
                app:layout_constraintTop_toBottomOf="@id/nextButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sign_up_hint_text_size"
                    android:text="@string/sign_up_already_have_account"
                    style="@style/Regular"
                    android:textColor="?attr/appTextPrimary" />

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/appPrimary"
                    style="@style/SemiBold"
                    android:text="@string/log_in"
                    android:textSize="@dimen/sign_up_hint_text_size"
                    android:layout_marginStart="@dimen/sign_up_login_in_margin_left" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>