<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ContentDescription"
    android:background="?attr/appBackground">

    <ImageView
        android:id="@+id/bgImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1500:1524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/search_failed_bg_margin_top"
        android:src="@drawable/img_search_failed_bg" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="996:776"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="@id/bgImageView"
        app:layout_constraintTop_toTopOf="@id/bgImageView"
        app:layout_constraintEnd_toEndOf="@id/bgImageView"
        app:layout_constraintBottom_toBottomOf="@id/bgImageView"
        android:layout_marginHorizontal="@dimen/search_failed_img_margin_horizontal"
        android:src="@drawable/img_search_failed" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/text2"
        android:layout_marginHorizontal="@dimen/search_failed_button_margin_horizontal"
        android:layout_marginBottom="@dimen/search_failed_text1_margin_bottom"
        android:text="@string/search_failed_text1"
        android:textColor="?attr/appTextPrimary"
        android:textSize="@dimen/search_failed_text2_size"
        style="@style/SemiBold"
        android:lineSpacingMultiplier="1.5"
        android:gravity="center" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/unbindButton"
        android:layout_marginHorizontal="@dimen/search_failed_button_margin_horizontal"
        android:layout_marginBottom="@dimen/search_failed_text2_margin_bottom"
        android:text="@string/search_failed_text2"
        android:textColor="?attr/appTextPrimary"
        android:textSize="@dimen/search_failed_text2_size"
        style="@style/Regular"
        android:lineSpacingMultiplier="1.5"
        android:gravity="center" />

    <com.konami.ailens.main.CutCornerButton
        android:id="@+id/unbindButton"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/tryAgainButton"
        android:layout_marginHorizontal="@dimen/search_failed_button_margin_horizontal"
        android:layout_marginBottom="@dimen/search_failed_button_spacing"
        android:text="@string/unbind_device"
        style="@style/PositiveBigCornerButton" />

    <com.konami.ailens.main.CutCornerButton
        android:id="@+id/tryAgainButton"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/search_failed_button_margin_horizontal"
        android:layout_marginBottom="@dimen/search_failed_button_margin_bottom"
        android:text="@string/try_again"
        style="@style/NegativeBigCornerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>