<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ContentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1500:874"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_nav_bg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/sign_up_padding">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/log_in"
                android:textColor="?attr/appPrimary"
                style="@style/SemiBold"
                android:includeFontPadding="false"
                android:textSize="@dimen/sign_up_title_text_size" />

            <!-- Email -->
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTextView"
                android:layout_marginTop="@dimen/sign_up_edit_text_margin_top"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:textColorHint="?attr/appTextPlaceholder"
                style="@style/Regular"
                android:includeFontPadding="false"
                android:textSize="@dimen/sign_up_edit_text_size"
                android:text="jenny@thinkar.com"
                android:textColor="?attr/appTextPrimary"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/emailErrorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/emailEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/sign_up_edit_text_invalid_hint_margin_left"
                style="@style/Regular"
                android:includeFontPadding="false"
                android:text="@string/email_invalid_hint"
                android:textColor="?attr/appRed"
                android:textSize="@dimen/sign_up_hint_text_size"
                android:alpha="0" />

            <!-- Password -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/emailEditText"
                android:layout_marginTop="@dimen/sign_up_edit_text_spacing"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:hint="@string/password"
                android:textColorHint="?attr/appTextPlaceholder"
                style="@style/Regular"
                android:includeFontPadding="false"
                android:textSize="@dimen/sign_up_edit_text_size"
                android:textColor="?attr/appTextPrimary"
                android:imeOptions="actionDone"
                android:text="Thinkar16888"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/passwordEyeButton"
                android:layout_width="@dimen/sign_up_eye_button_size"
                android:layout_height="@dimen/sign_up_eye_button_size"
                app:layout_constraintTop_toTopOf="@id/passwordEditText"
                app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
                app:layout_constraintEnd_toEndOf="@id/passwordEditText"
                android:layout_marginEnd="@dimen/sign_up_eye_button_margin_right"
                android:src="@drawable/ic_eye_close"
                android:contentDescription="@string/toggle_password_visibility" />

            <!-- Forget Password -->
            <TextView
                android:id="@+id/forgetPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/login_forget_password_margin_top"
                android:text="@string/forget_password"
                android:textColor="?attr/appTextSecondary"
                style="@style/SemiBold"
                android:includeFontPadding="false"
                android:textSize="@dimen/login_forget_password_text_size" />

            <!-- Login Button -->
            <com.konami.ailens.main.CutCornerView
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_big_button_height"
                app:layout_constraintTop_toBottomOf="@id/forgetPasswordTextView"
                android:layout_marginTop="@dimen/login_button_margin_top"
                app:cornerCut="@dimen/big_bottom_button_corner_cut"
                app:borderWidth="0dp"
                app:borderColor="@android:color/transparent"
                app:fillColor="?attr/appButtonDisable">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:textColor="?attr/appTextDisable"
                    android:textSize="@dimen/big_bottom_button_text_size"
                    style="@style/Bold"
                    android:includeFontPadding="false"
                    android:text="@string/log_in" />

            </com.konami.ailens.main.CutCornerView>

            <!-- Don't have account -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/sign_up_already_have_account_margin_top"
                app:layout_constraintTop_toBottomOf="@id/buttonLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sign_up_hint_text_size"
                    android:text="@string/dont_have_account"
                    style="@style/Regular"
                    android:includeFontPadding="false"
                    android:textColor="?attr/appTextPrimary" />

                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/appPrimary"
                    style="@style/SemiBold"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/sign_up_hint_text_size"
                    android:layout_marginStart="@dimen/sign_up_login_in_margin_left" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
